# bayesian_relational

./: pyproject.toml
article/: f1.csv  inital_draw.py  recall.csv
bayesian_relational/: crp.py  example.py  example2.py  experiment.py  experiment_new.py  graph_models.py
bayesian_relational.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: initial_data.py
draw/: draw.py
evaluation/: ecdf.py
non_reversible_mcmc/: __init__.py  mcmc_search_and_score.py  measure.py  point.py  step_methods.py
non_reversible_mcmc/experiment/: experiment_cognitive.py  f1_multi.csv  precision.csv  precision_multi.csv  recall_multi.csv
tests/: test_bayesian_relational.py  test_crp.py  test_score.py
