[tool.poetry]
name = "bayesian_relational"
version = "0.1.0"
description = ""
authors = ["antonina krajewska <antonina.krajewska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymc3 = "^3.8"
networkx = "^2.4"
sklearn = "^0.0"
matplotlib = "^3.2.0"
tk = "^0.1.0"
pytest = "^5.4.1"
statsmodels = "^0.11.1"
ray = "^0.8.4"
seaborn = "^0.10.1"
psutil = "^5.7.0"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[settings.virtualenvs]
in-project = true
